@@ -1,7 +1,7 @@
 package se.skl.tp.vagval;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static se.skl.tp.vagval.util.RoutingInfoUtil.createRoutingInfo;
@@ -16,8 +16,10 @@ import static se.skl.tp.vagval.util.TestTakDataDefines.RIV21;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import org.junit.Before;
-import org.junit.Test;
+
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.AdditionalMatchers;
 import org.mockito.Mock;
 import org.mockito.Mockito;
@@ -28,10 +30,9 @@ import se.skl.tp.hsa.cache.HsaCache;
 import se.skl.tp.hsa.cache.HsaCacheImpl;
 import se.skl.tp.vagval.logging.ThreadContextLogTrace;
 import se.skltp.takcache.RoutingInfo;
-import se.skltp.takcache.TakCache;
 import se.skltp.takcache.VagvalCache;
 
-public class OldStyleDefaultRoutingTest {
+class OldStyleDefaultRoutingTest {
   HsaCache hsaCache;
 
   @Mock
@@ -40,48 +41,55 @@ public class OldStyleDefaultRoutingTest {
   VagvalHandlerImpl vagvalHandler;
   DefaultRoutingConfiguration defaultRoutingConfiguration;
 
-  @Before
-  public void beforeTest() {
-    MockitoAnnotations.openMocks(this);
+  AutoCloseable mocks;
+
+  @BeforeEach
+  void beforeTest() {
+    mocks = MockitoAnnotations.openMocks(this);
     hsaCache = new HsaCacheImpl();
     defaultRoutingConfiguration = new DefaultRoutingConfigurationImpl();
     defaultRoutingConfiguration.setDelimiter("#");
   }
 
+  @AfterEach
+  void afterTest() throws Exception {
+    mocks.close();
+  }
+
   @Test
-  public void testRoutingByOldStyleDefaultRouting() throws Exception {
+  void testRoutingByOldStyleDefaultRouting() {
     List<RoutingInfo> list = new ArrayList<>();
     list.add(createRoutingInfo(ADDRESS_2, RIV21));
 
     Mockito.when(vagvalCache.getRoutingInfo(anyString(), eq(RECEIVER_2))).thenReturn(list);
     Mockito.when(vagvalCache.getRoutingInfo(anyString(), AdditionalMatchers.not(eq(RECEIVER_2))))
-        .thenReturn(Collections.<RoutingInfo>emptyList());
+        .thenReturn(Collections.emptyList());
 
     vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, defaultRoutingConfiguration );
 
     List<RoutingInfo> routingInfoList = vagvalHandler
         .getRoutingInfo(NAMNRYMD_1, RECEIVER_1_DEFAULT_RECEIVER_2);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_2, routingInfoList.get(0).getAddress());
-    assertEquals(RIV21, routingInfoList.get(0).getRivProfile());
+    assertEquals(ADDRESS_2, routingInfoList.getFirst().getAddress());
+    assertEquals(RIV21, routingInfoList.getFirst().getRivProfile());
 
     routingInfoList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_2_DEFAULT_RECEIVER_3);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_2, routingInfoList.get(0).getAddress());
-    assertEquals(RIV21, routingInfoList.get(0).getRivProfile());
+    assertEquals(ADDRESS_2, routingInfoList.getFirst().getAddress());
+    assertEquals(RIV21, routingInfoList.getFirst().getRivProfile());
 
     routingInfoList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_3_DEFAULT_RECEIVER_4);
     assertTrue(routingInfoList.isEmpty());
   }
 
   @Test
-  public void testTraceLoggingWhenRoutingByOldStyleDefaultRouting() throws Exception {
+  void testTraceLoggingWhenRoutingByOldStyleDefaultRouting() {
     List<RoutingInfo> list = new ArrayList<>();
     list.add(createRoutingInfo(ADDRESS_2, RIV21));
 
     Mockito.when(vagvalCache.getRoutingInfo(anyString(), eq(RECEIVER_2))).thenReturn(list);
     Mockito.when(vagvalCache.getRoutingInfo(anyString(), AdditionalMatchers.not(eq(RECEIVER_2))))
-        .thenReturn(Collections.<RoutingInfo>emptyList());
+        .thenReturn(Collections.emptyList());
 
     vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, defaultRoutingConfiguration );
 
@@ -103,17 +111,17 @@ public class OldStyleDefaultRoutingTest {
   }
 
   @Test
-  public void testIsNotAuthorizedByOldStyleDefaultRoutingWhenItsDisabled() throws Exception {
+  void testIsNotAuthorizedByOldStyleDefaultRoutingWhenItsDisabled() {
     List<RoutingInfo> list = new ArrayList<>();
     list.add(createRoutingInfo(ADDRESS_2, RIV21));
 
     Mockito.when(vagvalCache.getRoutingInfo(anyString(), eq(RECEIVER_2))).thenReturn(list);
     Mockito.when(vagvalCache.getRoutingInfo(anyString(), AdditionalMatchers.not(eq(RECEIVER_2))))
-        .thenReturn(Collections.<RoutingInfo>emptyList());
+        .thenReturn(Collections.emptyList());
 
-    DefaultRoutingConfiguration defaultRoutingConfiguration = new DefaultRoutingConfigurationImpl();
-    defaultRoutingConfiguration.setDelimiter("");
-    vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, defaultRoutingConfiguration);
+    DefaultRoutingConfiguration routingConfiguration = new DefaultRoutingConfigurationImpl();
+    routingConfiguration.setDelimiter("");
+    vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, routingConfiguration);
     List<RoutingInfo> routingInfoList = vagvalHandler
         .getRoutingInfo(NAMNRYMD_1, RECEIVER_1_DEFAULT_RECEIVER_2);
     assertTrue(routingInfoList.isEmpty());
